# OI_Installer

./: .gitignore  CMakeLists.txt  main.cpp
config/: install.json
include/: config.h  filesystem.h  installer.h  logger.h
src/: config.cpp  filesystem.cpp  installer.cpp  logger.cpp
